--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -24,163 +24,90 @@ font:
 window:
   opacity: 0.85
 
+# colors:
+#   # manjaro's defalut
+#   # Normal colors
+#   normal:
+#     black:   '#222D31'
+#     red:     '#ab4642'
+#     green:   '#7E807E'
+#     yellow:  '#f7ca88'
+#     blue:    '#7cafc2'
+#     magenta: '#ba8baf'
+#     cyan:    '#1ABB9B'
+#     white:   '#d8d8d8'
+#
+#   # Bright colors
+#   bright:
+#     black:   '#585858'
+#     red:     '#ab4642'
+#     green:   '#8D8F8D'
+#     yellow:  '#f7ca88'
+#     blue:    '#7cafc2'
+#     magenta: '#ba8baf'
+#     cyan:    '#1ABB9B'
+#     white:   '#f8f8f8'
+
 colors:
   # Default colors
   primary:
-    background: '#222D31'
-    foreground: '#d6d6d6' # grey
+    background: '0x1e2127'
+    foreground: '0xabb2bf'
 
     # Bright and dim foreground colors
     #
-    # The dimmed foreground color is calculated automatically if it is not
-    # present. If the bright foreground color is not set, or
-    # `draw_bold_text_with_bright_colors` is `false`, the normal foreground
-    # color will be used.
-    #dim_foreground: '#828482'
-    #bright_foreground: '#eaeaea'
+    # The dimmed foreground color is calculated automatically if it is not present.
+    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
+    # is `false`, the normal foreground color will be used.
+    #dim_foreground: '0x9a9a9a'
+    bright_foreground: '0xe6efff'
 
   # Cursor colors
   #
-  # Colors which should be used to draw the terminal cursor.
-  #
-  # Allowed values are CellForeground/CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
+  # Colors which should be used to draw the terminal cursor. If these are unset,
+  # the cursor color will be the inverse of the cell color.
   #cursor:
-  #  text: CellBackground
-  #  cursor: CellForeground
+  #  text: '0x000000'
+  #  cursor: '0xffffff'
 
-  # Vi mode cursor colors
-  #
-  # Colors for the cursor when the vi mode is active.
-  #
-  # Allowed values are CellForeground/CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #vi_mode_cursor:
-  #  text: CellBackground
-  #  cursor: CellForeground
-
-  # Search colors
-  #
-  # Colors used for the search bar and match highlighting.
-  #search:
-    # Allowed values are CellForeground/CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #matches:
-    #  foreground: '#000000'
-    #  background: '#ffffff'
-    #focused_match:
-    #  foreground: '#ffffff'
-    #  background: '#000000'
-
-    #bar:
-    #  background: '#c5c8c6'
-    #  foreground: '#1d1f21'
-
-  # Keyboard regex hints
-  #hints:
-    # First character in the hint label
-    #
-    # Allowed values are CellForeground/CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #start:
-    #  foreground: '#1d1f21'
-    #  background: '#e9ff5e'
-
-    # All characters after the first one in the hint label
-    #
-    # Allowed values are CellForeground/CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #end:
-    #  foreground: '#e9ff5e'
-    #  background: '#1d1f21'
-
-  # Line indicator
-  #
-  # Color used for the indicator displaying the position in history during
-  # search and vi mode.
-  #
-  # By default, these will use the opposing primary color.
-  #line_indicator:
-  #  foreground: None
-  #  background: None
-
-  # Selection colors
-  #
-  # Colors which should be used to draw the selection area.
-  #
-  # Allowed values are CellForeground/CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #selection:
-  #  text: CellBackground
-  #  background: CellForeground
-
-  # manjaro's defalut
   # Normal colors
   normal:
-    black:   '#222D31'
+    black:   '0x1e2127'
+    # red:     '0xe06c75'
     red:     '#ab4642'
-    green:   '#7E807E'
-    yellow:  '#f7ca88'
-    blue:    '#7cafc2'
+    green:   '0x98c379'
+    yellow:  '0xd19a66'
+    blue:    '0x61afef'
+    # magenta: '0xc678dd'
     magenta: '#ba8baf'
+    # cyan:    '0x56b6c2'
     cyan:    '#1ABB9B'
-    white:   '#d8d8d8'
+    # white:   '0x828791'
+    white:   '0xe0def4'
 
   # Bright colors
   bright:
-    black:   '#585858'
-    red:     '#ab4642'
-    green:   '#8D8F8D'
-    yellow:  '#f7ca88'
-    blue:    '#7cafc2'
+    black:   '0x5c6370'
+    red:     '0xe06c75'
+    green:   '0x98c379'
+    yellow:  '0xd19a66'
+    blue:    '0x61afef'
+    # magenta: '0xc678dd'
     magenta: '#ba8baf'
-    cyan:    '#1ABB9B'
-    white:   '#f8f8f8'
-
-  # alacritty's defalult
-  # Normal colors
-  #normal:
-  #  black:   '#1d1f21'
-  #  red:     '#cc6666'
-  #  green:   '#b5bd68'
-  #  yellow:  '#f0c674'
-  #  blue:    '#81a2be'
-  #  magenta: '#b294bb'
-  #  cyan:    '#8abeb7'
-  #  white:   '#c5c8c6'
-
-  # Bright colors
-  #bright:
-  #  black:   '#666666'
-  #  red:     '#d54e53'
-  #  green:   '#b9ca4a'
-  #  yellow:  '#e7c547'
-  #  blue:    '#7aa6da'
-  #  magenta: '#c397d8'
-  #  cyan:    '#70c0b1'
-  #  white:   '#eaeaea'
+    cyan:    '0x56b6c2'
+    white:   '0xe6efff'
 
   # Dim colors
   #
   # If the dim colors are not set, they will be calculated automatically based
   # on the `normal` colors.
-  #dim:
-  #  black:   '#131415'
-  #  red:     '#864343'
-  #  green:   '#777c44'
-  #  yellow:  '#9e824c'
-  #  blue:    '#556a7d'
-  #  magenta: '#75617b'
-  #  cyan:    '#5b7d78'
-  #  white:   '#828482'
-
-  # Indexed Colors
-  #
-  # The indexed colors include all colors from 16 to 256.
-  # When these are not set, they're filled with sensible defaults.
-  #
-  # Example:
-  #   `- { index: 16, color: '#ff00ff' }`
-  #
-  #indexed_colors: []
-
+  dim:
+    black:   '0x1e2127'
+    red:     '0xe06c75'
+    green:   '0x98c379'
+    yellow:  '0xd19a66'
+    blue:    '0x61afef'
+    # magenta: '0xc678dd'
+    magenta: '#ba8baf'
+    cyan:    '0x56b6c2'
+    white:   '0x828791'
