alacritty: cursor style block in vi mode

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -24,6 +24,10 @@ font:
 window:
   opacity: 0.85
 
+cursor:
+  vi_mode_style:
+    shape: Block
+
 # colors:
 #   # manjaro's defalut
 #   # Normal colors
