--- a/yt-dlp/.config/yt-dlp/config
+++ b/yt-dlp/.config/yt-dlp/config
@@ -1,1 +1,1 @@
---cookies-from-browser chromium:~/.local/share/qutebrowser
+--cookies-from-browser chromium:~/.local/share/qutebrowser --mark-watched
