--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,6 +39,9 @@ bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
 
+# overrides find window
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+
 # THEME
 set-option -g status-position top
 set -g status-bg black
