--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,6 +39,8 @@ bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
 
+bind-key -T copy-mode-vi i send-keys -X cancel
+
 # overrides find window
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
